# sql-query-grader

./: Dockerfile  README.md  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server
server/: Dockerfile  __init__.py  app.py  my_env_environment.py
