[project]
name = "sql-query-grader"
version = "2.0.0"
description = "SQL Query Evaluation Environment for OpenEnv Hackathon"
authors = [
    {name = "Ronak Bhanushali"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "openai==1.14.0",
    "pydantic==2.9.2",
    "httpx==0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"
